Fix top paragraph spacing

--- a/client/style/pages/_services.scss
+++ b/client/style/pages/_services.scss
@@ -3,6 +3,10 @@
     padding-bottom: 2rem;
   }
 
+  article:first-of-type {
+    margin-top: 2rem;
+  }
+
   article > p {
     margin-bottom: 0;
   }
